RESOLVED FIXED88137
DFG constant folding should be OK with GetLocal of captured variables having a constant
https://bugs.webkit.org/show_bug.cgi?id=88137
Summary DFG constant folding should be OK with GetLocal of captured variables having ...
Filip Pizlo
Reported 2012-06-01 14:27:30 PDT
Patch forthcoming.
Attachments
the patch (10.94 KB, patch)
2012-06-01 14:28 PDT, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-06-01 14:28:35 PDT
Created attachment 145376 [details] the patch
Geoffrey Garen
Comment 2 2012-06-01 14:32:41 PDT
r=me > LayoutTests/fast/js/dfg-cse-cfa-discrepancy-expected.txt:1 > +Tests stability when the CFA finds a constant in block-local data flow over captured variables but the CSE doesn't because if differences in heap modeling. Typo: "if" should be "of".
Filip Pizlo
Comment 3 2012-06-01 14:33:48 PDT
Landed in http://trac.webkit.org/changeset/119281, but before I saw Gavin's comment. Fix for that on the way.
Filip Pizlo
Comment 4 2012-06-01 14:34:58 PDT
Ryosuke Niwa
Comment 5 2012-06-01 15:16:33 PDT
(In reply to comment #4) > Typo fix in http://trac.webkit.org/changeset/119282 And did the same in the expected result: http://trac.webkit.org/changeset/119288
Filip Pizlo
Comment 6 2012-06-01 15:18:31 PDT
(In reply to comment #5) > (In reply to comment #4) > > Typo fix in http://trac.webkit.org/changeset/119282 > > And did the same in the expected result: http://trac.webkit.org/changeset/119288 Ooops! Thank you for fixing this!
Note You need to log in before you can comment on or make changes to this bug.