DFG constant folding should be OK with GetLocal of captured variables having a constant https://bugs.webkit.org/show_bug.cgi?id=88137

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* dfg/DFGConstantFoldingPhase.cpp:
(JSC::DFG::ConstantFoldingPhase::run):

LayoutTests:

* fast/js/dfg-cse-cfa-discrepancy-expected.txt: Added.
* fast/js/dfg-cse-cfa-discrepancy.html: Added.
* fast/js/script-tests/dfg-cse-cfa-discrepancy.js: Added.
(foo.bar.baz):
(foo.bar):
(foo):



Canonical link: https://commits.webkit.org/105958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119281 268f45cc-cd09-0410-ab3c-d52691b4dbfc